tests/NormalTests/paczka1/fuzzy1/23918121.err
Error in line 7: qr9fH A725 77,6
Error in line 9: qr9fH S292 58,5
Error in line 15: dr6sGeh S280 64,5
Error in line 27: qB3uWUsMuBq A283 1,6
Error in line 32: dr6sGeh S292 83,1
Error in line 39: S292 S280 4,3
